--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <div class="section1">
         <h4>cashmere</h4>
+        <p> Comme chaque fois que je nippais en milord, costume en cashmere, les pieds campés dans des Richelieu, j'avais une pensée pour le beau-père de mon ami P., un voyou de la vieille école, que je n'avais vu que trois fois dans ma vie, mais dont la ganache m'avait imposé le respect pour toujours.</p>
         <nav>
             <img src="images/photo_habits.jpg" alt="">
         </nav>
