--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
 
 <body>
     <section class="container">
-        <header class="header">header</header>
-        <footer class="footer">Footer</footer>
-        <div class="content">Content</div>
-        <aside class="sidebar">sidebar</aside>
+        <header>header</header>
+        <footer>Footer</footer>
+        <div>Content</div>
+        <aside>sidebar</aside>
     </section>
-    <div class="header">
-        <h1>Trenton</h1>
-    </div>
-    <div class="section1">
-        <h4>cashmere</h4>
-        <p> Comme chaque fois que je nippais en milord, costume en cashmere, les pieds campés dans des Richelieu, j'avais une pensée pour le beau-père de mon ami P., un voyou de la vieille école, que je n'avais vu que trois fois dans ma vie, mais dont la ganache m'avait imposé le respect pour toujours.</p>
+
+    <div>
+        <h4 class="name">Brand Name</h4>
+        <div class="cube"></div>
+        <p class="texte1">"La seule chose qui garde le Cachemire de l'autodestruction à la façon du Pakistan ou de l'Afghanistan, c'est son bon vieux capitalisme petit bourgeois. Si religieux soient-ils, les Cachemiris sont de grands hommes d'affaires. Et tous les hommes d'affaires, d'une manière ou d'une autre, ont intérêt à voir se prolonger le statu quo ou ce que nous appelons "processus de paix" qui, soit dit en passant, offre des opportunités commerciales très différentes de la paix à proprement parler."</p>
         <nav>
             <img src="images/photo_habits.jpg" alt="">
         </nav>
@@ -41,7 +40,6 @@
     <div class="section3">
         <h4>Pure cotton</h4>
     </div>
-    <div class="cube"></div>
     <footer>
         <p>Author: Gabriela Arrabaco</p>
         <p><a href="gabriellearrabaco@gmail.com">gabriellearrabaco@gmail.com</a></p>
