changement durant les cours
jai continué mon site

--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
 
     <div>
         <h4 class="name">Brand Name</h4>
+        <img class="picture7" src="images/766_dolce-and-gabbana-winter-2015-men-advertising-campaign-011.jpg.webp">
         <p class="texte1">"La seule chose qui garde le Cachemire de l'autodestruction à la façon du Pakistan ou de l'Afghanistan, c'est son bon vieux capitalisme petit bourgeois. Si religieux soient-ils, les Cachemiris sont de grands hommes d'affaires. Et tous les hommes d'affaires, d'une manière ou d'une autre, ont intérêt à voir se prolonger le statu quo ou ce que nous appelons "processus de paix" qui, soit dit en passant, offre des opportunités commerciales très différentes de la paix à proprement parler."</p>
         <nav>
-            <img src="images/photo_habits.jpg" alt="">
+            <img class="picture4" src="images/Zara-man-spring-2021-ad-campaign-the-impression-008-scaled-1.jpg" alt="">
+            <p class="texte2">Costume beige avec ceinture seulement disponible en magasin</p>
+            <hr>
         </nav>
     </div>
-    <div class="section2">
-        <h4>silks</h4>
+    <div>
         <nav>
-            <img src="images/photo_habits_2.jpg">
+            <img class="picture5" src="images/b7b69f0b79068dd299b2d747617147c0.jpg">
         </nav>
     </div>
     <div class="section3">
