--- a/index.html
+++ b/index.html
@@ -6,45 +6,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boté</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
-    <style>
-        body {
-            font-family: 'Crimson Pro', serif;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="container">
-        <header>header</header>
-        <footer>Footer</footer>
-        <div>Content</div>
-        <aside>sidebar</aside>
-    </section>
-
-    <div>
-        <h4 class="name">Brand Name</h4>
+        <nav class="navbar">
+            <div class="logo">Brand name</div>
+            <ul class="nav-links">
+              <div class="menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Shop</a></li>
+                <li><a href="/">Contact</a></li>
+              </div>
+            </ul>
+          </nav>
         <img class="picture7" src="images/766_dolce-and-gabbana-winter-2015-men-advertising-campaign-011.jpg.webp">
-        <p class="texte1">"La seule chose qui garde le Cachemire de l'autodestruction à la façon du Pakistan ou de l'Afghanistan, c'est son bon vieux capitalisme petit bourgeois. Si religieux soient-ils, les Cachemiris sont de grands hommes d'affaires. Et tous les hommes d'affaires, d'une manière ou d'une autre, ont intérêt à voir se prolonger le statu quo ou ce que nous appelons "processus de paix" qui, soit dit en passant, offre des opportunités commerciales très différentes de la paix à proprement parler."</p>
-        <nav>
+        <p class="texte9">"La seule chose qui garde le Cachemire de l'autodestruction à la façon du Pakistan ou de l'Afghanistan, c'est son bon vieux capitalisme petit bourgeois. Si religieux soient-ils, les Cachemiris sont de grands hommes d'affaires. Et tous les hommes d'affaires, d'une manière ou d'une autre, ont intérêt à voir se prolonger le statu quo ou ce que nous appelons "processus de paix" qui, soit dit en passant, offre des opportunités commerciales très différentes de la paix à proprement parler."</p>
+    
             <img class="picture4" src="images/Zara-man-spring-2021-ad-campaign-the-impression-008-scaled-1.jpg" alt="">
             <p class="texte2">Costume beige avec ceinture seulement disponible en magasin</p>
             <hr>
-        </nav>
-    </div>
-    <div>
-        <nav>
-            <img class="picture5" src="images/b7b69f0b79068dd299b2d747617147c0.jpg">
-        </nav>
-    </div>
-    <div class="section3">
-        <h4>Pure cotton</h4>
-    </div>
+ <div class="row">
+     <div class="column">
+         <img src="images/chem1.webp" alt="chemise 1" style="width: 100%">
+         <p>Chemise Ralph Lauren gingham - Rose</p>
+     </div>
+     <div class="column">
+         <img src="images/chem2.webp" alt="chemise 2" style="width: 100%">
+         <p>Chemise Ralph Lauren gingham - Mauve</p>
+     </div>
+     <div class="column">
+         <img src="images/chem3.webp" alt="chemise 3" style="width: 100%">
+         <p>Chemise Ralph Lauren gingham - Rose</p>
+     </div>
+ </div>
     <footer>
-        <p>Author: Gabriela Arrabaco</p>
-        <p><a href="gabriellearrabaco@gmail.com">gabriellearrabaco@gmail.com</a></p>
-    </footer>
+        <p class="text-center">Copyright &copy; Devpractical.com</p>
+      </footer>
+    </div>
+
 </body>
 
 </html>
